HW7/Lindo6/Dll32/Lindhdrs.h

// Definitions for all LINDO library routines

extern void APPCOL( char **, long *, float *, long *, long *);
extern void BINVT( double *);
extern void CAPOUT( long *);
extern void CLRBAS();
extern void D2DMY( long *, long *, long *, long *);
extern void DEFROW( long *, float *, long *, long *);
extern void DELCON( long *);
extern void DMY2D( long *, long *, long *, long *, long *);
extern void DRPVAR( long *, double *, double *);
extern void FPRIME( long *, long *);
extern void FREEIT( long *);
extern void GETCOL( long *, char **, long *, float *, long *, float *, long *);
extern void GO( long *, long *);
extern void HEAPFR( long *, long *, long *, long *);
extern void HEAPIT( long *, long *, long *, long *);
extern void ILINDO();
extern void INIT();
extern void INSERT( long *, long *, float *, long*);
extern void INSROW( long *, long *, long *, float *);
extern void INVPRM( long *, long *);
extern void KLOSE( long *);
extern void LOOK( long *, long *);
extern void LSALTN( long *, char **, long *, long *, long *);
extern void LSAVPR( double *, long *, char **, long *, long *);
extern void LSDMPS( long *);
extern void LSEXIT();
extern void LSFETP( double *, long *, double *);
extern void LSGTPR( double *, char **, long *);
extern void LSGTRO( long *, long *, long *, float *, long *);
extern void LSINSR( long *);
extern void LSPUNC( long *, char **);
extern void LSPUTP( double *, long *, double *);
extern void LSCTTN();
extern void LUNGET( long *, long *, long *);
extern void LUNOPN( long *, long *, char **, long *, long *, long *, long *);
extern void LXBRED( long *, long *);
extern void LXBWRT( long *, long *);
extern void MAKINT( long *);
extern void NDXOFV( char **, long *, long *, long *);
extern void NINTEQ( long *);
extern void OUTSPC( long *);
extern void PARBGN( long *, float *);
extern void PARSTP( float *, long *, long *);
extern void QUIET( long *);
extern void RDBC( long *);
extern void RDMPS( long *, long *);
extern void REPROW( long *, float *, float *);
extern void REPVAR( long *, float *, float *);
extern void RETR( long *);
extern void RNGBGN();
extern void RNGCOL( long *, float *, float *, float *);
extern void RNGROW( long *, float *, float *, float *);
extern void SAVE( long *);
extern void SDBC( long *);
extern void SETIPT( float *);
extern void SETQCP( long *);
extern void SETSLB( long *, float *);
extern void SETSUB( long *, float *);
extern void STATS( long *);